package S201250137.Matrix;

public interface Sort {
    void load(int[] sortedElement);
    void sort();
    String getProcess();

}
